--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -148,11 +148,34 @@ body {
   overflow: hidden;
 }
 
+@media only screen and (max-width: 1050px) {
+  .container {
+    height: min-content;
+    padding: 20% 0;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .works {
+    height: min-content !important;
+    padding: 30% 0 !important;
+  }
+
+  .projects {
+    margin-bottom: 10%;
+  }
+
+  h4 {
+    top: 92% !important;
+  }
+}
+
 .about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: rgb(31, 31, 31);
   text-align: center;
-  margin-top: 5%;
-  padding: 0 10%;
   font-size: large;
   font-family: "Roboto", sans-serif;
   p {
@@ -160,17 +183,22 @@ body {
   }
 }
 
+.row {
+  margin: 0 5% !important;
+}
+
 .works {
   height: 100%;
   width: 100%;
   background-color: rgb(31, 31, 31);
+  position: relative;
 }
 
-.works h1 {
+#workTitle {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 120%;
+  top: 5%;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -250,7 +278,8 @@ h4 {
   display: flex;
   justify-content: center;
   width: 100%;
-  font-size: 2.5vw !important;
+  height: 10%;
+  font-size: 2vw !important;
 }
 
 .contact {
@@ -267,7 +296,7 @@ h4 {
 
 .wrapper {
   position: fixed !important;
-  bottom: -120%;
+  bottom: -150%;
   right: 0;
   left: 0;
   margin: auto;
