--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   width: 100%;
@@ -101,6 +105,11 @@ body {
 /* When you mouse over the navigation links, change their color */
 .sidebar a:hover {
   color: #f1f1f1;
+  text-decoration: none;
+}
+
+.active {
+  color: #f1f1f1 !important;
 }
 
 /* Position and style the close button (top right corner) */
@@ -166,13 +175,17 @@ body {
 @media only screen and (max-width: 850px) {
   .works {
     height: min-content !important;
-    padding: 30% 0 !important;
+    padding-bottom: 35% !important;
+    padding-top: 46% !important;
   }
   .projects {
-    margin-bottom: 10%;
+    margin-bottom: 20%;
   }
   h4 {
-    top: 92% !important;
+    top: 85% !important;
+  }
+  #workTitle {
+    top: 10% !important;
   }
 }
 
@@ -205,7 +218,7 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 5%;
+  top: 12%;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -288,7 +301,7 @@ h4 {
   justify-content: center;
   width: 100%;
   height: 10%;
-  font-size: 2vw !important;
+  font-size: 2.2vw !important;
 }
 
 .contact {
@@ -306,7 +319,7 @@ h4 {
 
 .wrapper {
   position: fixed !important;
-  bottom: -150%;
+  top: 150%;
   right: 0;
   left: 0;
   margin: auto;
@@ -327,19 +340,19 @@ h4 {
 
 @keyframes slideIn {
   from {
-    bottom: -120%;
+    top: 150%;
   }
   to {
-    bottom: 0%;
+    top: 2vh;
   }
 }
 
 @keyframes slideOut {
   from {
-    bottom: 0%;
+    top: 2vh;
   }
   to {
-    bottom: -120%;
+    top: 150%;
   }
 }
 
