--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -7,6 +7,9 @@ body {
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   background-color: transparent;
   box-sizing: border-box;
@@ -15,6 +18,7 @@ body {
   height: 90%;
   min-width: 280px;
   max-width: 70vh;
+  max-height: 110vw;
 }
 
 .wrapper > .popup {
@@ -28,7 +32,7 @@ body {
 .popup {
   width: 100%;
   height: 100%;
-  margin-top: 2%;
+  margin: auto 0;
   border-radius: 10px;
   background-color: #303030;
   color: snow;
