--- a/assets/css/popup.scss
+++ b/assets/css/popup.scss
@@ -30,6 +30,9 @@ body {
 }
 
 .popup {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100%;
   margin: auto 0;
@@ -39,7 +42,6 @@ body {
   font-family: "Roboto", sans-serif;
   overflow: hidden;
   padding-top: 0.5%;
-  padding-bottom: 0.3vw;
   border: 3px solid rgb(68, 68, 68);
 }
 
@@ -58,8 +60,12 @@ body {
   margin-top: -3%;
   margin-left: 2%;
   width: 45%;
-  height: 8%;
+  height: 100%;
   font-size: 10px;
+}
+
+.buttons {
+  height: 8%;
 }
 
 .btn-primary {
