--- a/assets/css/popup.scss
+++ b/assets/css/popup.scss
@@ -15,7 +15,7 @@ body {
   box-sizing: border-box;
   resize: horizontal;
   width: 30%;
-  height: 90%;
+  height: 95%;
   min-width: 280px;
   max-width: 70vh;
 }
@@ -111,7 +111,7 @@ body {
 }
 
 .description {
-  padding: 0 5%;
+  padding: 0;
   margin: 0 auto;
   text-align: center;
   margin-top: -5%;
