--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -26,6 +26,10 @@ body {
   z-index: 100;
 }
 
+h1 {
+  padding-top: 7%;
+}
+
 .navbar {
   background-color: #303030 !important;
   overflow: hidden;
@@ -160,9 +164,25 @@ body {
   display: flex !important;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 5%;
+  margin-bottom: 0;
   height: 100%;
   overflow: hidden;
+}
+
+.contents {
+  padding-top: 2%;
+}
+
+.contents i {
+  font-size: larger;
+}
+
+.contents p {
+  height: 65%;
+}
+
+h6 {
+  color: #a1a1a1;
 }
 
 @media only screen and (max-width: 1050px) {
@@ -218,7 +238,7 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 12%;
+  top: 0;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -232,6 +252,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 10%;
 }
 
 .projects {
@@ -286,6 +307,12 @@ body {
 
 .proj3:hover {
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 13%;
 }
 
 h4 {
