--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -27,6 +27,10 @@ body {
   z-index: 100;
 }
 
+h1 {
+  padding-top: 7%;
+}
+
 .navbar {
   background-color: rgb(48, 48, 48) !important;
   overflow: hidden;
@@ -152,9 +156,35 @@ body {
   display: flex !important;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 5%;
+  margin-bottom: 0;
   height: 100%;
   overflow: hidden;
+}
+.contents {
+  padding-top: 2%;
+  i {
+    font-size: larger;
+  }
+  p {
+    height: 65%;
+  }
+}
+
+// .workEthics {
+//   border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+//   border-left: 0.5px solid rgba(0, 0, 0, 0.3);
+// }
+// .skills {
+//   border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+//   border-left: 0.5px solid rgba(0, 0, 0, 0.3);
+// }
+// .experience {
+//   border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+//   border-left: 0.5px solid rgba(0, 0, 0, 0.3);
+// }
+
+h6 {
+  color: rgb(161, 161, 161);
 }
 
 @media only screen and (max-width: 1050px) {
@@ -212,7 +242,7 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 12%;
+  top: 0;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -226,6 +256,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 10%;
 }
 
 .projects {
@@ -278,6 +309,12 @@ body {
 
 .proj3:hover {
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 13%;
 }
 
 h4 {
