--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -166,7 +166,8 @@ h1 {
     font-size: larger;
   }
   p {
-    height: 65%;
+    height: 85%;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
   }
 }
 
